# slint

./: .gitignore  Cargo.toml  aarch64-openharmony-ohos-musl.json  build-slint-ohos.sh
.cargo/: config
.github/actions/gitee/: action.yaml
.github/workflows/: ci.yaml  sync2gitee.yaml
api/ohos/: Cargo.toml  aarch64-openharmony-ohos-musl.json  build.rs  demo.slint  package.json
api/ohos/.github/workflows/: CI.yml
api/ohos/npm/android-arm-eabi/: README.md
api/ohos/npm/android-arm64/: README.md
api/ohos/npm/darwin-universal/: README.md
api/ohos/npm/freebsd-x64/: README.md
api/ohos/npm/linux-arm64-musl/: README.md
api/ohos/npm/linux-x64-musl/: README.md
api/ohos/src/: lib.rs  main.rs  ohos.rs  ohoswindowadapter.rs
api/ohos/src/calloop_backend/: ohos.rs
api/ohos/src/display/: egldisplay.rs  glutin.rs
api/ohos/src/renderer/: femtovg.rs
api/ohos/tests/: init.rs
api/rs/slint/: Cargo.toml
examples/ohos/: Cargo.toml  Dockerfile  README.md  README_zh.md  main.rs
examples/ohos-demo/: Cargo.toml  build.rs  crud.slint  demo.slint  lib.rs  main.rs  ohos_sw.rs  webrtc.rs
internal/backends/ohos/: Cargo.toml  Dockerfile  build.rs  build.sh  build_ohos.sh  calloop_backend.rs  display.rs  lib.rs  ohoswindowadapter.rs
internal/backends/ohos/calloop_backend/: input.rs  ohos.rs
internal/backends/ohos/display/: egldisplay.rs
internal/backends/ohos/renderer/: femtovg.rs  sw.rs
internal/common/: Cargo.toml  sharedfontdb.rs
internal/compiler/passes/: embed_glyphs.rs
internal/core/: Cargo.toml  item_rendering.rs  item_tree.rs  software_renderer.rs  window.rs
internal/renderers/femtovg/: Cargo.toml  fonts.rs  lib.rs
ohos/: Cargo.toml  Dockerfile  README_zh.md  build.rs  build.sh  demo.slint  lib.rs  main.rs  platform.rs
ohos/npm/darwin-arm64/: README.md
ohos/npm/darwin-x64/: README.md
ohos/npm/linux-arm-gnueabihf/: README.md
ohos/npm/linux-arm64-gnu/: README.md
ohos/npm/linux-x64-gnu/: README.md
ohos/npm/win32-arm64-msvc/: README.md
ohos/npm/win32-ia32-msvc/: README.md
ohos/npm/win32-x64-msvc/: README.md
scripts/: aarch64-unknown-linux-ohos-clang++.sh  aarch64-unknown-linux-ohos-clang.sh  armv7-unknown-linux-ohos-clang++.sh  armv7-unknown-linux-ohos-clang.sh  x86_64-unknown-linux-ohos-clang++.sh  x86_64-unknown-linux-ohos-clang.sh
