[package]
edition = "2021"
name = "ohos"
version = "0.0.0"

[lib]
crate-type = ["cdylib"]

[dependencies]
# Default enable napi4 feature, see https://nodejs.org/api/n-api.html#node-api-version-matrix
napi = { version = "2.12.2", default-features = false, features = ["napi4"] }
napi-derive = "2.12.2"

slint = { path = "../api/rs/slint", default-features = false, features = [
    "compat-1-0",
    "std",
] }

[build-dependencies]
napi-build = "2.0.1"
slint-build = { path = "../api/rs/build" }

[profile.release]
lto = true
