[package]
edition = "2021"
name = "ohos"
version = "0.0.0"


[[bin]]
path = "src/main.rs"
name = "ohos"

[lib]
path="src/lib.rs"
crate-type = ["cdylib"]

[dependencies]
# Default enable napi4 feature, see https://nodejs.org/api/n-api.html#node-api-version-matrix
napi = { version = "2.12.2", default-features = false, features = ["napi4"] }
napi-derive = "2.12.2"

#slint = { path = "../api/rs/slint", default-features = false, features = [
#    "compat-1-0",
#    "std",
#] }

i-slint-core = { version = "=1.2.0", path="../../internal/core", default-features = false, features = ["ffi"] }
slint-interpreter = { version = "=1.2.0", path="../../internal/interpreter", default-features = false, features = ["ffi", "compat-1-2"], optional = true }


[build-dependencies]
napi-build = "2.0.1"
slint-build = { path = "../rs/build" }

[profile.release]
lto = true
