# Copyright © SixtyFPS GmbH <info@slint.dev>
# SPDX-License-Identifier: MIT

[package]
name = "ohos-demo"
version = "1.4.0"
edition = "2021"
license = "MIT"
build = "build.rs"
publish = false

[[bin]]
path = "main.rs"
name = "ohos-demo"
[lib]
##path="src/lib.rs"
crate-type = ["cdylib"]

[dependencies]
slint = { workspace = true, default-features = false, features = [
    "compat-1-0",
    "std",
    "ohos",
] }
i-slint-backend-ohos={workspace = true}

webrtc = "0.9.0"
lazy_static = "1"
tokio = { version = "1.32.0", features = ["full"] }

[build-dependencies]
slint-build = { path = "../../api/rs/build" }
