# Copyright © SixtyFPS GmbH <info@slint.dev>
# SPDX-License-Identifier: MIT

[package]
name = "ohos-demo"

documentation.workspace = true
edition.workspace = true
homepage = "https://slint.rs"
license.workspace = true
repository.workspace = true
rust-version.workspace = true
version.workspace = true
description = "Slint for OpenHarmony"
categories = ["gui", "rendering::engine"]
keywords = ["gui", "toolkit", "graphics", "design", "ui","OpenHarmony","OHOS"]

build = "build.rs"
publish = false

#[[bin]]
#path = "main.rs"
#name = "ohos-demo"
[lib]
path="lib.rs"
crate-type = ["cdylib"]

[dependencies]
slint = { workspace = true, default-features = false, features = [
    "compat-1-0",
    "std",
    "ohos",
] }
i-slint-backend-ohos={workspace = true}
libc = "0.2"
rand = "0.8"

#webrtc = "0.9.0"
lazy_static = "1"
tokio = { version = "1.32.0", features = ["full"] }
#napi       = { version = "*",features=["async"] }
#napi-derive = { version = "*" }

napi-ohos        = { version = "*",features=["ohos","async"] }
napi-derive-ohos = { version = "*" }

#OpenHarmony 日志库
#hilog-binding = { git="https://gitee.com/tdcare/ohos-native-bindings.git"}
hilog-binding = "0.0.4"
once_cell = "1.5"


[build-dependencies]
slint-build = { path = "../../api/rs/build" }
#napi-build-ohos = { version = "*" }
napi-build = { version = "*" }

